--- a/final-project/src/styles/Experiences.module.scss
+++ b/final-project/src/styles/Experiences.module.scss
@@ -5,7 +5,7 @@
 }
 
 .navExperiences {
-  height: 70vh;
+  height: auto;
   background-color: var(--color-blue2);
   color: var(--color-orange);
 }
@@ -18,8 +18,7 @@
   align-items: center;
 
   h1 {
-    // padding: 0.625rem;
-    width: 25rem;
+    padding: 0.625rem;
     line-height: 1.5;
     font-size: 1.5rem;
   }
@@ -30,7 +29,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  // gap: 1.25rem;
 }
 
 .search {
@@ -40,18 +38,19 @@
 .mainExperiences {
   min-height: 50vh;
   background-color: var(--color-blue2);
-  padding: 5rem 1.25rem;
+  min-height: 50vh;
+  padding: 3.125rem 0.75rem 11.25rem 0.75rem;
 }
 
 @media screen and (min-width: 48rem) {
   .navExperiences {
-    height: 80vh;
+    height: auto;
   }
 
   .textNav {
     padding-top: 1.25rem;
     h1 {
-      width: 600px;
+      width: 37.5rem;
       line-height: 1.5;
     }
   }
