--- a/final-project/src/styles/Profile.module.scss
+++ b/final-project/src/styles/Profile.module.scss
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   gap: 1.875rem;
-  font-size: 16px;
+  font-size: 1rem;
   justify-content: center;
   align-items: center;
   color: var(--color-white2);
@@ -30,15 +30,15 @@
   img {
     position: absolute;
     bottom: -6.25rem;
-    width: 200px;
-    height: 200px;
+    width: 12.5rem;
+    height: 12.5rem;
     border-radius: 50%;
     object-fit: cover;
     border: 0.25rem solid var(--color-blue2);
   }
 
   h2 {
-    font-size: 18px;
+    font-size: 1.125rem;
     padding-bottom: 0.375rem;
     color: var(--color-yellow);
   }
@@ -48,7 +48,6 @@
 
 .containerInfo {
   padding: 3.125rem;
-  width: 18.75rem;
   border: 0.0625rem solid var(--color-white2);
   border-radius: 0.5rem;
 }
@@ -80,13 +79,14 @@
 .labelInfo {
   font-weight: bold;
   color: var(--color-white);
+  padding-right: 2.5rem;
 }
 
 .username,
 .email {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  gap: 3.125rem;
 }
 
 .infoName {
@@ -95,13 +95,13 @@
 
 .title {
   color: var(--color-orange);
-  font-size: 20px;
+  font-size: 1.25rem;
   padding-top: 1.875rem;
   text-align: center;
 }
 
 .bookings {
-  padding-bottom: 6.25rem;
+  padding-bottom: 8.75rem;
 }
 
 @media screen and (min-width: 48rem) {
@@ -120,7 +120,7 @@
     color: var(--color-orange);
   }
   .bookings {
-    padding-bottom: 4.375rem;
+    padding-bottom: 8.75rem;
   }
 
   .session {
