--- a/final-project/src/styles/Profile.module.scss
+++ b/final-project/src/styles/Profile.module.scss
@@ -102,6 +102,8 @@
 
 .bookings {
   padding-bottom: 8.75rem;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 @media screen and (min-width: 48rem) {
